--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </header>
     <nav id="nav_menu">
     <ul>
-        <li><a href="Index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Services and Pricing</a></li>
         <li><a href="#">Testimonies</a></li>
         <li><a href="#">Photo Gallery</a></li>
