--- a/index.html
+++ b/index.html
@@ -16,17 +16,31 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="#">Services and Pricing</a></li>
         <li><a href="#">Testimonies</a></li>
-        <li><a href="#">Photo Gallery</a></li>
+        <li><a href="gallery.html">Photo Gallery</a></li>
         </ul></nav>
     <h1>Helping you with all your pet needs</h1>
 <main>
     <img src="image0.jpeg" alt="dog walking">
+      </main>
     <aside>
-        <h2>With The Pet-Sitters Club, we take care of your furbabies as if they were our own. We know how chaotic life can get, we are here to help! Please head over to our Services and Pricing page for more details.</h2>
+        <h2>With The Pet-Sitters Club, we take care of your furbabies as if they were our own. We know how chaotic life can get, we are here to help! Please head over to our Services and Pricing page for more details. Please fill out the form below for any questions you have.</h2>
+        <form>
+        <label for="firstname">First name:</label>
+            <input type="text" id="firstname" autofocus><br>
+            <label for="lastname">Last name:</label>
+            <input type="text" id="lastname"><br>
+            <label for="dogbreed">Dog breed:</label>
+            <input type="text" id="dogbreed"><br>
+            <label for="city">City:</label>
+            <input type="text" id="city"><br>
+            <label for="email">Email</label>
+            <input type="text" id="email"><br>
+            <input type="submit" id="button" value="Submit">
+            <input type="reset" id="reset">
+               </form>
     </aside>
-    </main>
 <footer>
-    <p>Last updated October 20th</p>
+    <p>Last updated October 27th</p>
     </footer>
 </body>
 </html>
