--- a/gallery.html
+++ b/gallery.html
@@ -14,12 +14,11 @@
     <nav id="nav_menu">
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Services and Pricing</a></li>
-        <li><a href="#">Testimonies</a></li>
-        <li><a href="#">Photo Gallery</a></li>
+        <li><a href="prices.html">Services and Pricing</a></li>
+        <li><a href="testimonies.html">Testimonies</a></li>
+        <li><a href="gallery.html">Pet Pics</a></li>
         </ul></nav>
-    <h1>Photo Gallery</h1>
-<main>
+    <h1>Pet Pics</h1>
     <div class="gallery">
         <a target="_blank" href="CDD1E76C-6AC3-478F-8833-0099D9BF4468-794-00000230911CA702.JPEG">
     <img src="CDD1E76C-6AC3-478F-8833-0099D9BF4468-794-00000230911CA702.JPEG" alt="dogs at a dog park" width="600" height="400">
@@ -74,7 +73,6 @@
         </a>
         <div class="desc">Ms Erin training Blanca.</div>
         </div>
-      </main>
 <footer>
     <p>Last updated October 27th</p>
     </footer>
