--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav id="nav_menu">
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Services and Pricing</a></li>
-        <li><a href="#">Testimonies</a></li>
-        <li><a href="gallery.html">Photo Gallery</a></li>
+        <li><a href="prices.html">Services and Pricing</a></li>
+        <li><a href="testimonies.html">Testimonies</a></li>
+        <li><a href="gallery.html">Pet Pics</a></li>
         </ul></nav>
     <h1>Helping you with all your pet needs</h1>
 <main>
