--- a/testimonies.html
+++ b/testimonies.html
@@ -4,6 +4,8 @@
 <title>The Pet-Sitters Club</title>
       <meta charset="utf-8">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="bootstrap.css">
+  <script src="bootstrap.bundle.js"></script>
 </head>
      <body>
 <header><a target="_top" href="https://flamingtext.com/" ><img src="https://blog.flamingtext.com/blog/2024/10/21/flamingtext_com_1729469723_28373154.png" border="0" alt="Logo Design by FlamingText.com" title="Logo Design by FlamingText.com"></a>
@@ -22,18 +24,18 @@
     <div class="card lg-primary">
       <div class="card-body text-center">
           <div class="card">
-              <img src="dog%20photo.jpeg" class="card-img-top" alt="Benji the lab" width="100" height="100" >
+              <img src="dog%20photo.jpeg" class="card-img-top" alt="Benji the lab" width="5%" height="15%" >
         <p class="card-text">We used The Pet-sitters club for our boy benji and couldn't be happier. He came back extremely tired and well behaved. From all the pictures I recieved, it looked like he had the time of his life! Highly recommend.<br><strong>Kyle F.</strong></p>
         <div class="card">
-    <img src="image2.jpeg" class="card-img-top" alt="yellow lab" width="100" height="100">
+    <img src="image2.jpeg" class="card-img-top" alt="yellow lab" width="100%" height="100%">
     <div class="card-body">
         <p class="card-text">We left our baby girl bella in good hands when we left her with The Pet-sitters club. All the pictures we saw made us feel comfortable that she was being well taken care of. 10/10 will use again.<br><strong>Jennifer S.</strong></p>
         <div class="card">
-    <img src="IMG_8409.jpg" class="card-img-top" alt="Chesapeake bay retriever" width="100" height="100">
+    <img src="IMG_8409.jpg" class="card-img-top" alt="Chesapeake bay retriever" width="100%" height="100%">
     <div class="card-body">
         <p class="card-text">We use The Pet-sitters Club every time we go out of town, or work in the office. Our boy, Roman, loves going there, everyone on staff is so kind and treats Roman as if he was their own. Best pet sitters around!<br><strong>James M.</strong></p>
               <div class="card">
-    <img src="image1.jpeg" class="card-img-top" alt="Chesapeake bay retriever" width="100" height="100">
+    <img src="image1.jpeg" class="card-img-top" alt="Chesapeake bay retriever" width="100%" height="100%">
     <div class="card-body">
         <p class="card-text">I was a little hesistant leaving my 6 month old Chessie with a stranger, but my friend had recommended them and so I gave it a shot. The Pet-sitters Club eased my mind with all the updates and photos. I now use the Pet-sitters Club every chance I get. Best reccommendation I have ever been given.<br><strong>Donna A.</strong>  </p>
       </div>
