--- a/prices.html
+++ b/prices.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>The Pet-Sitters Club</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="main.css">
+
+
 </head>
 <body>
 
@@ -14,6 +17,7 @@
 
 </header>
     <nav id="nav_menu">
+        
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="prices.html">Services and Pricing</a></li>
