--- a/prices.html
+++ b/prices.html
@@ -24,6 +24,7 @@
         <li><a href="testimonies.html">Testimonies</a></li>
         <li><a href="gallery.html">Pet Pics</a></li>
         </ul></nav>
+
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
@@ -62,3 +63,11 @@
     </div>
   </div>
 </div>
+
+
+<footer>
+  <p>Last updated November 18th</p>
+  </footer>
+
+</body>
+</html>
